# pattern-finder

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.txt  pattern-finder.mjs
.github/workflows/: test.yml
cli/: Cargo.toml
cli/src/: main.rs  menu.rs
config/: Cargo.toml
config/src/: fmt.rs  lib.rs
gui/: Cargo.toml
math/: Cargo.toml
math/LaTeX/: math.tex
math/src/: exponential.rs  function.rs  lib.rs  linear_algebra.rs  polynomial.rs  ratio_field.rs  real_ratio.rs  util.rs
src/: exponential.rs  fmt.rs  main.rs  menu.rs  output.rs  polynomial.rs  user_input.rs  util.rs
util/: Cargo.toml
util/src/: lib.rs
