[package]
name = "pattern-finder"
version = "0.1.0"
authors = ["liambloom <liamrbloom@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "math",
    "cli",
    "gui",
    "config",
    "util",
]

[[bin]]
name = "cli"
path = "cli/src/main.rs"

[[bin]]
name = "gui"
path = "gui/src/main.rs"

[dependencies]
num = "0.3"
regex = "1"
indexmap = "1.3.2"
crossterm = "0.17.7"
nalgebra = "0.24"
paste = "1.0"
approx = "^0.4"
simba = "^0.3"
math = { path = "math" }
util = { path = "util" }
config = { path = "config" }
inheriting_wrapper = { path="../inheriting_wrapper" }