[package]
name = "cli"
version = "0.1.0"
authors = ["liambloom <liamrbloom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math = { path = "../math" }
util = { path = "../util" }
config = { path = "../config" }
num = "0.3"
crossterm = "0.17.7"
indexmap = "1.3.2"