[package]
name = "math"
version = "0.1.0"
authors = ["liambloom <liamrbloom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
config = { path = "../config" }
num = "0.3"
nalgebra = "0.24"
paste = "1.0"
regex = "1"
approx = "^0.4"
simba = "^0.3"